--- a/PastEvent.html
+++ b/PastEvent.html
@@ -10,7 +10,7 @@
     <link rel="style"  href="./style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-secondary text-white">
         <div class="container-fluid">
             <div class="container">
                 <a class="navbar-brand">
@@ -27,8 +27,8 @@
         </div>
     </nav>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary>
-        <div id="carouselExample" class="carousel slide">
+    <nav class="navbar navbar-expand-lg bg-secondary text-white d-flex align-items-center>
+        <div id= "carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <h5>Upcoming Events</h5>
@@ -105,7 +105,37 @@
       </div>
 
 
-
+      <footer class="navbar bg-secondary text-white">
+        <div class="container text-center">
+            <div class="row align-items-start">
+              <div class="col">
+                <a class="navbar-brand" href="https://www.instagram.com/">
+                    <img src="./assets/logo-instagram.png" alt="logo-instagram" width="30" height="24">
+                </a>
+              </div>
+            </div>
+        </div>
+    
+        <div class="container text-center">
+            <div class="row align-items-start">
+              <div class="col">
+                <a class="navbar-brand" href="https://www.facebook.com/">
+                    <img src="./assets/logo-facebook.png" alt="logo-facebook" width="30" height="24">
+                </a>
+              </div>
+            </div>
+        </div>
+    
+        <div class="container text-center">
+            <div class="row align-items-start">
+              <div class="col">
+                <a class="navbar-brand" href="https://www.whatsapp.com/">
+                    <img src="./assets/logo-whatsapp.png" alt="logo-whatsapp" width="30" height="24">
+                </a>
+              </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
