--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="style"  href="./style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-secondary text-white">
         <div class="container-fluid">
             <div class="container">
                 <a class="navbar-brand">
@@ -20,15 +20,15 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               <a class="nav-link" href="./upcomingEvents.html">Upcoming Events</a>
-              <a class="nav-link" href="#">Past Event</a>
+              <a class="nav-link" href="./PastEvent.html">Past Event</a>
               <a class="nav-link" href="#">contact</a>
-              <a class="nav-link" href="#">stats</a>
+              <a class="nav-link" href="./stats.html">stats</a>
             </div>
         </div>
     </nav> 
 
 
-    <div class="mb-3">
+    <div class="mb-3" w-50%>
         <label for="exampleFormControlInput1" class="form-label">Name:</label>
         <input type="text" class="form-control" id="name">
       </div>
@@ -45,7 +45,37 @@
       </div>
 
 
-
+      <footer class="navbar bg-secondary text-white">
+        <div class="container text-center">
+            <div class="row align-items-start">
+              <div class="col">
+                <a class="navbar-brand" href="https://www.instagram.com/">
+                    <img src="./assets/logo-instagram.png" alt="logo-instagram" width="30" height="24">
+                </a>
+              </div>
+            </div>
+        </div>
+    
+        <div class="container text-center">
+            <div class="row align-items-start">
+              <div class="col">
+                <a class="navbar-brand" href="https://www.facebook.com/">
+                    <img src="./assets/logo-facebook.png" alt="logo-facebook" width="30" height="24">
+                </a>
+              </div>
+            </div>
+        </div>
+    
+        <div class="container text-center">
+            <div class="row align-items-start">
+              <div class="col">
+                <a class="navbar-brand" href="https://www.whatsapp.com/">
+                    <img src="./assets/logo-whatsapp.png" alt="logo-whatsapp" width="30" height="24">
+                </a>
+              </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
 </body>
