--- a/upcomingEvents.html
+++ b/upcomingEvents.html
@@ -10,7 +10,7 @@
     <link rel="style"  href="./style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-secondary text-white">
         <div class="container-fluid">
             <div class="container">
                 <a class="navbar-brand">
@@ -18,10 +18,10 @@
                 </a>
             </div>
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               <a class="nav-link" href="#">Upcoming Events</a>
               <a class="nav-link" href="#">Past Event</a>
-              <a class="nav-link" href="#">contact</a>
+              <a class="nav-link" href="./contact.html">contact</a>
               <a class="nav-link" href="#">stats</a>
             </div>
         </div>
@@ -60,7 +60,7 @@
         <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
 
-    <div class="container text-center">
+    <div class="container text-center" class="text-bg-success">
         <div class="row align-items-start">
           <div class="col">
             <div class="card" style="width: 18rem;">
@@ -105,7 +105,37 @@
       </div>
 
 
-
+      <footer class="navbar bg-secondary text-white">
+        <div class="container text-center">
+            <div class="row align-items-start">
+              <div class="col">
+                <a class="navbar-brand" href="https://www.instagram.com/">
+                    <img src="./assets/logo-instagram.png" alt="logo-instagram" width="30" height="24">
+                </a>
+              </div>
+            </div>
+        </div>
+    
+        <div class="container text-center">
+            <div class="row align-items-start">
+              <div class="col">
+                <a class="navbar-brand" href="https://www.facebook.com/">
+                    <img src="./assets/logo-facebook.png" alt="logo-facebook" width="30" height="24">
+                </a>
+              </div>
+            </div>
+        </div>
+    
+        <div class="container text-center">
+            <div class="row align-items-start">
+              <div class="col">
+                <a class="navbar-brand" href="https://www.whatsapp.com/">
+                    <img src="./assets/logo-whatsapp.png" alt="logo-whatsapp" width="30" height="24">
+                </a>
+              </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
