--- a/details.html
+++ b/details.html
@@ -22,49 +22,43 @@
               <a class="btn btn-danger dropdown-toggle" href="./index.html">Home</a>
               <a class="btn btn-danger dropdown-toggle" href="./upcomingEvents.html">Upcoming Events</a>
               <a class="btn btn-danger dropdown-toggle" href="./PastEvent.html">Past Event</a>
-              <a class="btn btn-danger dropdown-toggle" href="#">contact</a>
-              <a class="btn btn-danger dropdown-toggle" href="./details.html">Details</a>
+              <a class="btn btn-danger dropdown-toggle" href="./contact.html">contact</a>
+              <a class="btn btn-danger dropdown-toggle" href="#">Details</a>
               <a class="btn btn-danger dropdown-toggle" href="./stats.html">stats</a>
             </div>
         </div>
     </nav>
 
-
     <div class="container">
         <div class="row bg-black text-white">
             <div class="col-sm-1 col-md-2 col-lg-2 col-xl-2 float-start">
-                <a href="./PastEvent.html"><img src="./assets/flecha-derecha.jpg"
-                        alt="flechaizquierda" height="60" /></a>
+                <a href="./stats.html"><img src="./assets/flecha-derecha.jpg"
+                        alt="flechaderecha" height="60" /></a>
             </div>
             <div class="col-sm-10 col-md-8 col-lg-8 col-xl-8 my-auto d-flex justify-content-center">
-                <h2>CONTACT</h2>
+                <h2>DETAILS</h2>
             </div>
             <div class="col-sm-1 col-md-2 col-lg-2 col-xl-2 d-flex justify-content-end">
-                <a href="./details.html"><img src="./assets/flecha-izquierda.jpg" alt="flechaizquierda" height="60"</a>
+                <a href="./stats.html"><img src="./assets/flecha-izquierda.jpg" alt="flechaizquierda" height="60"</a>
             </div>
         </div>
     </div>
 
-
-    <div class="mb-3" >
-        <label for="exampleFormControlInput1" class="form-label">Name:</label>
-        <input type="text" class="form-control" id="name">
+    <div class="card mb-3" w-100%; heigth="60%" align-self: start;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="./assets/Marathon.jpg" class="img-fluid rounded-start"  alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
     </div>
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Email:</label>
-        <input type="email" class="form-control" id="Email">
-    </div>
-    <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="MENSAGGE">Mensagge:</label>
-        <textarea class="form-control" id="MENSAGGE" rows="3"></textarea>
-    <div class="col-12">
-            <button class="btn btn-primary" type="submit">Submit</button>
-    </div>
-    
 
-
-     
-  
+ 
     <footer class="navbar bg-secondary text-white">
         <div class="">
             <div class="row align-items-start">
