--- a/upcomingEvents.html
+++ b/upcomingEvents.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <div class="container">
                 <a class="navbar-brand">
-                  <img src="./assets/LogoAmazingEvents.png" alt="Bootstrap" width="80" height="40">
+                  <img src="./assets/LogoAmazingEvents.png" alt="Bootstrap" width="100" height="60">
                 </a>
             </div>
 
@@ -48,45 +48,35 @@
         <div class="container-fluid" row>
         <form class="d-flex">
             <div>
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="disabledFieldsetCheck" disabled>
-                  <label class="form-check-label" for="disabledFieldsetCheck">
-                   CATEGORY
-                  </label>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                    <label class="form-check-label" for="inlineCheckbox1">CATEGORY</label>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="disabledFieldsetCheck" disabled>
-                    <label class="form-check-label" for="disabledFieldsetCheck">
-                     CATEGORY
-                    </label>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                    <label class="form-check-label" for="inlineCheckbox2">CATEGORY</label>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="disabledFieldsetCheck" disabled>
-                    <label class="form-check-label" for="disabledFieldsetCheck">
-                     CATEGORY
-                    </label>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" disabled>
+                    <label class="form-check-label" for="inlineCheckbox3">CATEGORY</label>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="disabledFieldsetCheck" disabled>
-                    <label class="form-check-label" for="disabledFieldsetCheck">
-                     CATEGORY
-                    </label>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" disabled>
+                    <label class="form-check-label" for="inlineCheckbox3">CATEGORY</label>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="disabledFieldsetCheck" disabled>
-                    <label class="form-check-label" for="disabledFieldsetCheck">
-                     CATEGORY
-                    </label>
-                </div>
-
-                <div>
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" disabled>
+                    <label class="form-check-label" for="inlineCheckbox3">CATEGORY</label>
                 </div>
             </div>
         </form>
+
+        <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
        </div>
-      </nav>
+    </nav>
 
     <div class="container text-center" class="text-bg-success">
         <div class="row align-items-start">
