--- a/stats.html
+++ b/stats.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <div class="container">
                 <a class="navbar-brand">
-                  <img src="./assets/LogoAmazingEvents.png" alt="Bootstrap" width="80" height="40">
+                  <img src="./assets/LogoAmazingEvents.png" alt="Bootstrap" width="100" height="60">
                 </a>
             </div>
 
@@ -33,8 +33,8 @@
     <div class="container">
         <div class="row bg-black text-white">
             <div class="col-sm-1 col-md-2 col-lg-2 col-xl-2 float-start">
-                <a href="./stats.html"><img src="./Resources_Amazing_Events/flecha-izquierda.png"
-                        alt="flechaizquierda" height="60" /></a>
+                <a href="./stats.html"><img src=".//assets/flecha-derecha.jpg"
+                        alt="flechaderecha" height="60" /></a>
             </div>
             <div class="col-sm-10 col-md-8 col-lg-8 col-xl-8 my-auto d-flex justify-content-center">
                 <h2>STATS</h2>
@@ -126,11 +126,9 @@
               </table>
             </td>
         </tr>
-
     </table>
 
-   
-   
+
     <footer class="navbar bg-secondary text-white">
         <div class="">
             <div class="row align-items-start">
