correcciones-inicio js

--- a/details.html
+++ b/details.html
@@ -19,12 +19,12 @@
             </div>
 
             <div class="btn-group">
-              <a class="btn btn-danger dropdown-toggle" href="./index.html">Home</a>
-              <a class="btn btn-danger dropdown-toggle" href="./upcomingEvents.html">Upcoming Events</a>
-              <a class="btn btn-danger dropdown-toggle" href="./PastEvent.html">Past Event</a>
-              <a class="btn btn-danger dropdown-toggle" href="./contact.html">contact</a>
-              <a class="btn btn-danger dropdown-toggle" href="#">Details</a>
-              <a class="btn btn-danger dropdown-toggle" href="./stats.html">stats</a>
+              <a class="btn btn-danger" href="./index.html">Home</a>
+              <a class="btn btn-danger" href="./upcomingEvents.html">Upcoming Events</a>
+              <a class="btn btn-danger" href="./PastEvent.html">Past Event</a>
+              <a class="btn btn-danger" href="./contact.html">contact</a>
+              <a class="btn btn-danger" href="#">Details</a>
+              <a class="btn btn-danger" href="./stats.html">stats</a>
             </div>
         </div>
     </nav>
@@ -32,14 +32,14 @@
     <div class="container">
         <div class="row bg-black text-white">
             <div class="col-sm-1 col-md-2 col-lg-2 col-xl-2 float-start">
-                <a href="./stats.html"><img src="./assets/flecha-derecha.jpg"
+                <a href="./stats.html"><img src="./assets/flecha-izquierda.png"
                         alt="flechaderecha" height="60" /></a>
             </div>
             <div class="col-sm-10 col-md-8 col-lg-8 col-xl-8 my-auto d-flex justify-content-center">
                 <h2>DETAILS</h2>
             </div>
             <div class="col-sm-1 col-md-2 col-lg-2 col-xl-2 d-flex justify-content-end">
-                <a href="./stats.html"><img src="./assets/flecha-izquierda.jpg" alt="flechaizquierda" height="60"</a>
+                <a href="./stats.html"><img src="./assets/flecha-derecha.png" alt="flechaderecha" height="60"</a>
             </div>
         </div>
     </div>
