--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             </div>
 
             <div class="btn-group">
-              <a class="btn btn-danger dropdown-toggle" href="#">Home</a>
-              <a class="btn btn-danger dropdown-toggle" href="./upcomingEvents.html">Upcoming Events</a>
-              <a class="btn btn-danger dropdown-toggle" href="./PastEvent.html">Past Event</a>
-              <a class="btn btn-danger dropdown-toggle" href="./contact.html">contact</a>
-              <a class="btn btn-danger dropdown-toggle" href="./details.html">Details</a>
-              <a class="btn btn-danger dropdown-toggle" href="./stats.html">stats</a>
+              <a class="btn btn-danger" href="#">Home</a>
+              <a class="btn btn-danger" href="./upcomingEvents.html">Upcoming Events</a>
+              <a class="btn btn-danger" href="./PastEvent.html">Past Event</a>
+              <a class="btn btn-danger" href="./contact.html">contact</a>
+              <a class="btn btn-danger" href="./details.html">Details</a>
+              <a class="btn btn-danger" href="./stats.html">stats</a>
             </div>
         </div>
     </nav>
@@ -32,14 +32,14 @@
     <div class="container">
         <div class="row bg-black text-white">
             <div class="col-sm-1 col-md-2 col-lg-2 col-xl-2 float-start">
-                <a href="./stats.html"><img src="./assets/flecha-derecha.jpg"
+                <a href="./stats.html"><img src="./assets/flecha-izquierda.png"
                         alt="flechaizquierda" height="60" /></a>
             </div>
             <div class="col-sm-10 col-md-8 col-lg-8 col-xl-8 my-auto d-flex justify-content-center">
                 <h2>HOME</h2>
             </div>
             <div class="col-sm-1 col-md-2 col-lg-2 col-xl-2 d-flex justify-content-end">
-                <a href="./upcomingEvents.html"><img src="./assets/flecha-izquierda.jpg" alt="flechaizquierda" height="60"</a>
+                <a href="./upcomingEvents.html"><img src="./assets/flecha-derecha.png" alt="flechaderecha" height="60"</a>
             </div>
         </div>
     </div>
@@ -57,15 +57,15 @@
                     <label class="form-check-label" for="inlineCheckbox2">CATEGORY</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" disabled>
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
                     <label class="form-check-label" for="inlineCheckbox3">CATEGORY</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" disabled>
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
                     <label class="form-check-label" for="inlineCheckbox3">CATEGORY</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" disabled>
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
                     <label class="form-check-label" for="inlineCheckbox3">CATEGORY</label>
                 </div>
             </div>
@@ -140,7 +140,7 @@
     
 
  
-    <footer class="navbar bg-secondary text-white">
+    <footer class="navbar bg-secondary text-white" w-auto>
         <div class="">
             <div class="row align-items-start">
               
@@ -181,5 +181,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
+    <script src="./index.js.js"></script>
 </body>
 </html>
