tarjetas pasadas y futuras

--- a/upcomingEvents.html
+++ b/upcomingEvents.html
@@ -78,63 +78,13 @@
        </div>
     </nav>
 
-    <div class="container text-center" class="text-bg-success">
-        <div class="row align-items-start">
-          <div class="col">
-            <div class="card" style="width: 15rem;">
-                <img src="./assets/Cinema.jpg" class="card-img-top" alt="Cinema">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-                <div class="card-body">
-                  <a href="#" class="card-link">Card link</a>
-                </div>
-              </div>
-            </div>
 
-          <div class="col">
-       <div class="card" style="width: 15rem;">
-        <img src="./assets/Costume_Party.jpg" class="card-img-top" alt="Costume_Party">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-        <div class="card-body">
-          <a href="#" class="card-link">Card link</a>
-        </div>
-      </div>
-          </div>
+    <div id="contenedor" class="d-flex flex-wrap gap-3 justify-content-center p-3">
 
-          
-          <div class="col">
-            <div class="card" style="width: 15rem;">
-             <img src="./assets/Food_Fair.jpg" class="card-img-top" alt="Costume_Party">
-             <div class="card-body">
-               <h5 class="card-title">Card title</h5>
-               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-             </div>
-             <div class="card-body">
-               <a href="#" class="card-link">Card link</a>
-             </div>
-           </div>
-               </div>
+    </div>
 
 
-        <div class="col">      
-      <div class="card" style="width: 15rem;">
-        <img src="./assets/Food_Fair.jpg" class="card-img-top" alt="Food_Fair">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-        <div class="card-body">
-          <a href="#" class="card-link">Card link</a>
-        </div>
-      </div>
-          </div>
-        </div>
-      </div>
+
 
     <footer class="navbar bg-secondary text-white">
         <div class="">
