--- a/details.html
+++ b/details.html
@@ -44,18 +44,8 @@
         </div>
     </div>
 
-    <div class="card mb-3" w-100%; heigth="60%" align-self: start;">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="./assets/Marathon.jpg" class="img-fluid rounded-start"  alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-          </div>
-        </div>
+    <div id="contenedor" class="d-flex flex-wrap gap-3 justify-content-center p-3">
+
     </div>
 
  
@@ -100,5 +90,8 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
+    <script src="./data.js"></script> 
+    <script src="./details.js"></script>
+
 </body>
 </html>
