--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="style"  href="./style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-xxl bg-secondary text-white">
+    <nav class="navbar navbar-expand-lg bg-secondary text-white">
         <div class="container-fluid">
             <div class="container">
                 <a class="navbar-brand">
-                  <img src="./assets/LogoAmazingEvents.png" alt="Bootstrap" width="80" height="40">
+                  <img src="./assets/LogoAmazingEvents.png" alt="Bootstrap" width="100" height="60">
                 </a>
             </div>
 
