--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </a>
             </div>
 
-            <div class="btn-group">
+            <div class="btn-group d-flex flex-wrap">
               <a class="btn btn-danger" href="#">Home</a>
               <a class="btn btn-danger" href="./upcomingEvents.html">Upcoming Events</a>
               <a class="btn btn-danger" href="./PastEvent.html">Past Event</a>
@@ -29,8 +29,8 @@
         </div>
     </nav>
     
-    <div class="container">
-        <div class="row bg-black text-white">
+    <div>
+        <div class="row bg-black text-white d-flex flex-wrap">
             <div class="col-sm-1 col-md-2 col-lg-2 col-xl-2 float-start">
                 <a href="./stats.html"><img src="./assets/flecha-izquierda.png"
                         alt="flechaizquierda" height="60" /></a>
@@ -45,36 +45,36 @@
     </div>
     
     <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid" row>
-        <form class="d-flex">
-            <div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                    <label class="form-check-label" for="inlineCheckbox1">CATEGORY</label>
+        <div class="container-fluid">
+            <form class="d-flex">
+                <div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                        <label class="form-check-label" for="inlineCheckbox1">CATEGORY</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                        <label class="form-check-label" for="inlineCheckbox2">CATEGORY</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                        <label class="form-check-label" for="inlineCheckbox3">CATEGORY</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                        <label class="form-check-label" for="inlineCheckbox3">CATEGORY</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                        <label class="form-check-label" for="inlineCheckbox3">CATEGORY</label>
+                    </div>
                 </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                    <label class="form-check-label" for="inlineCheckbox2">CATEGORY</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                    <label class="form-check-label" for="inlineCheckbox3">CATEGORY</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                    <label class="form-check-label" for="inlineCheckbox3">CATEGORY</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                    <label class="form-check-label" for="inlineCheckbox3">CATEGORY</label>
-                </div>
-            </div>
-        </form>
+            </form>
 
-        <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button id="button" class="btn btn-outline-success" type="submit">Search</button>
+            </form>
        </div>
     </nav>
 
@@ -124,7 +124,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>  
-    <script src="./data.js"></script>   
-    <script src="./index.js"></script>
+    <script src="./js/data.js"></script>   
+    <script src="./js/index.js"></script>
 </body>
 </html>
