--- a/stats.html
+++ b/stats.html
@@ -18,7 +18,7 @@
                 </a>
             </div>
 
-            <div class="btn-group">
+            <div class="btn-group d-flex flex-wrap">
               <a class="btn btn-danger" href="./index.html">Home</a>
               <a class="btn btn-danger" href="./upcomingEvents.html">Upcoming Events</a>
               <a class="btn btn-danger" href="./PastEvent.html">Past Event</a>
@@ -30,7 +30,7 @@
     </nav>
 
 
-    <div class="container">
+    <div>
         <div class="row bg-black text-white">
             <div class="col-sm-1 col-md-2 col-lg-2 col-xl-2 float-start">
                 <a href="./stats.html"><img src=".//assets/flecha-izquierda.png"
