--- a/upcomingEvents.html
+++ b/upcomingEvents.html
@@ -18,7 +18,7 @@
                 </a>
             </div>
 
-            <div class="btn-group">
+            <div class="btn-group d-flex flex-wrap">
               <a class="btn btn-danger" href="./index.html">Home</a>
               <a class="btn btn-danger" href="#">Upcoming Events</a>
               <a class="btn btn-danger" href="./PastEvent.html">Past Event</a>
@@ -29,7 +29,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div>
         <div class="row bg-black text-white">
             <div class="col-sm-1 col-md-2 col-lg-2 col-xl-2 float-start">
                 <a href="./index.html"><img src="./assets/flecha-izquierda.png"
@@ -130,7 +130,7 @@
     </footer>
         
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>  
-    <script src="./data.js"></script>    
-    <script src="./upcomingEvent.js"></script>
+    <script src="./js/data.js"></script>    
+    <script src="./js/upcomingEvent.js"></script>
 </body>
 </html>
