--- a/index.html
+++ b/index.html
@@ -50,30 +50,38 @@
                 <div>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                        <label class="form-check-label" for="inlineCheckbox1">CATEGORY</label>
+                        <label class="form-check-label" for="inlineCheckbox1">Food Fair</label>
                     </div>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                        <label class="form-check-label" for="inlineCheckbox2">CATEGORY</label>
+                        <label class="form-check-label" for="inlineCheckbox2">Museum</label>
                     </div>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                        <label class="form-check-label" for="inlineCheckbox3">CATEGORY</label>
+                        <label class="form-check-label" for="inlineCheckbox3">Costume Party</label>
                     </div>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                        <label class="form-check-label" for="inlineCheckbox3">CATEGORY</label>
+                        <label class="form-check-label" for="inlineCheckbox3">Music Concert</label>
                     </div>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                        <label class="form-check-label" for="inlineCheckbox3">CATEGORY</label>
+                        <label class="form-check-label" for="inlineCheckbox3">Race</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                        <label class="form-check-label" for="inlineCheckbox3">Book Exchange</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                        <label class="form-check-label" for="inlineCheckbox3">Cinema</label>
                     </div>
                 </div>
             </form>
 
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button id="button" class="btn btn-outline-success" type="submit">Search</button>
+                <button id="boton" class="btn btn-outline-success" type="submit">Search</button>
             </form>
        </div>
     </nav>
